--- a/EcolenseIntelligence/requirements.txt
+++ b/EcolenseIntelligence/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-plotly
-numpy
-scikit-learn
-scipy 
+streamlit>=1.28.0
+pandas>=1.5.0
+plotly>=5.15.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+scipy>=1.10.0 
