--- a/EcolenseIntelligence/requirements.txt
+++ b/EcolenseIntelligence/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-plotly
-numpy
-scikit-learn 
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.0.0
+numpy>=1.25.0
+scikit-learn>=1.3.0 
