--- a/EcolenseIntelligence/requirements.txt
+++ b/EcolenseIntelligence/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-plotly>=5.0.0
-numpy>=1.25.0
-scikit-learn>=1.3.0 
+streamlit==1.46.1
+pandas==2.3.1
+plotly==6.0.1
+numpy==1.26.4
+scikit-learn==1.6.1 
