--- a/EcolenseIntelligence/requirements.txt
+++ b/EcolenseIntelligence/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.46.1
-pandas==2.3.1
-plotly==6.0.1
-numpy==1.26.4
-scikit-learn==1.6.1 
+streamlit
+pandas
+plotly
+numpy
+scikit-learn 
