--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.28.0
-pandas==2.1.0
-plotly==5.17.0
-numpy==1.24.3
-scikit-learn==1.3.0
-shap==0.43.0
-matplotlib==3.7.2
-seaborn==0.12.2
-requests==2.31.0
-openpyxl==3.1.2
-xlrd==2.0.1
-python-dotenv==1.0.0 
+streamlit
+pandas
+plotly
+numpy
+scikit-learn
+shap
+matplotlib
+seaborn
+requests
+openpyxl
+xlrd
+python-dotenv 
